--- a/service.yaml
+++ b/service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1 # Kubernetes API version
 kind: Service # Kubernetes resource kind we are creating
 metadata: # Metadata of the resource kind we are creating
-  name: springboot-k8ssvc
+  name: spring-boot-devopslab
 spec:
   type: LoadBalancer
   selector:
