--- a/service.yaml
+++ b/service.yaml
@@ -3,7 +3,8 @@ kind: Service # Kubernetes resource kind we are creating
 metadata: # Metadata of the resource kind we are creating
   name: spring-boot-devopslab
 spec:
-  type: LoadBalancer
+  type: NodePort
+  externalIPs: 192.168.49.2
   selector:
     app: serving-web-content-complete
   ports:
