--- a/service.yaml
+++ b/service.yaml
@@ -3,7 +3,7 @@ kind: Service # Kubernetes resource kind we are creating
 metadata: # Metadata of the resource kind we are creating
   name: spring-boot-devopslab
 spec:
-  type: cluusterIp
+  type: clusterIp
   selector:
     app: serving-web-content-complete
   ports:
