--- a/service.yaml
+++ b/service.yaml
@@ -3,10 +3,11 @@ kind: Service # Kubernetes resource kind we are creating
 metadata: # Metadata of the resource kind we are creating
   name: spring-boot-devopslab
 spec:
-  type: ClusterIP
+  type: NodePort
   selector:
     app: serving-web-content-complete
   ports:
     - protocol: "TCP"
       port: 8084 # The port that the service is running on in the cluster
       targetPort: 8084 # The port exposed by the service
+      nodePort: 30008
