--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,10 @@
 	<properties>
 		<java.version>17</java.version>
 	</properties>
+	<properties>
+		<!-- Other properties -->
+		<sonar.organization>devopslab-test</sonar.organization>
+	  </properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
