--- a/devops lab/console.properties
+++ b/devops lab/console.properties
@@ -1,5 +1,5 @@
 kobitonDeviceId=
-remoteWebDriverType=Selenium
+remoteWebDriverType=
 kobitonUserName=
 adoPlanId=
 adoPlanID=
@@ -20,4 +20,3 @@ testcloudEnvironmentID=
 remoteWebDriverUrl=
 adoTestRunName=
 testcloudTunnel=
-apiKey=8ab4881c-db3c-4353-a407-a9620d45ab93
